	Some fixes in the recorder & player routine
	Better support for "VDR on SmartTV" & check if availible.
	Lot of small fixes and changes.
	Added Menu INFO for IP/ DVR state
	Standby now stops the stream, getting back from standby reconnects to server & sets display
	Added initial support for MPD -> client plays stream from MPD-httpd
	Recordings Menu now show maps.

0.10	Added sub Listinges for use as Radio list / Protected List / SD/HD list etc
	(Use for Multicast Channels keyword MultiCast in Serveradres)
	(Multicast & streamdev is limited to 255 channels?)
	Left/ Right select list
	Switch to Radiolist with key 'TV' or 'RADIO' (give same keycode)
	Small fixes,  guideview, epg setup, timeshift.
	In guideview Get EPG only for highlighted channel to speedup scrolling.
	Added CanalSat to the EPG filter. Updated CDS/TVV routine.
	EPGinfo extended with videoinfo read from the stream.
	Direct recording with record button, next push stops recording. (Only for HDD models)
	Changed the Main Menu.
	TimeShift is possible for multicast channels. (Only for HDD models)
	Changed the style to round corners

	Support for recordings served by "VDR on SmartTV" plugin


0.06	More options in Main Menu:
	Audio selection normal,hearing_impaired,visually_impaired 
	cfg.media.subtitling.modepriority, cfg.media.subtitling.typepriority
	removed cds setting.
	Fixed : OSD time left/ time played is updated.
		New BootImage now supports AC3 downmixing, so no more work around by selecting NAR sound track.
	EPGinfo extended with audio languages read from the stream.
	Pause only when Timeshift is set


0.05	OSD 1920x1088 (16:9) // OSD 1280x720 (16:9) // OSD 704x576 (16:9) But should work on other size too.
	EPG language routine expanded. More NIDs added.
	Added toFixed on Schedule page.
	Fixed colorkeys in some view.
	Subs can be switched off from the menu.
	More Recording / MediaPlayer testing


0.04	Volume OSD bar
	Media Player added.
	Only Play/ Pause & FF, no REW.
	OSD made for 576i !!