@@ -6,6 +6,9 @@
 	Standby now stops the stream, getting back from standby reconnects to server & sets display
 	Added initial support for MPD -> client plays stream from MPD-httpd
 	Recordings Menu now show maps.
+	Use of restfulapi
+		Read Timers from Server
+		Delete recording // if you want to Delete a recording, change in restfulapi/recordings.ccp line 46 DELETE by POST
 
 0.10	Added sub Listinges for use as Radio list / Protected List / SD/HD list etc
 	(Use for Multicast Channels keyword MultiCast in Serveradres)
